# duckietown-lx

./: .dtproject  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
OLD/modcon/: .gitignore  (+2 more)
OLD/modcon/solution/src/encoder_pose/: package.xml
OLD/object-detection/solution/src/object_detection/: package.xml  setup.py
OLD/object-detection/solution/src/object_detection/config/object_detection_node/: default.yaml
OLD/object-detection/solution/src/object_detection/include/object_detection/: model.py
OLD/object-detection/solution/src/object_detection/include/object_detection/weights/: README.md
OLD/object-detection/solution/src/object_detection/launch/: object_detection_node.launch
OLD/object-detection/solution/src/object_detection/src/: object_detection_node.py
OLD/state_estimation/solution/src/lane_filter/: package.xml  setup.py
OLD/state_estimation/solution/src/lane_filter/include/lane_filter/: histogram_filter.py
OLD/state_estimation/solution/src/lane_filter/launch/: lane_filter_node.launch
braitenberg/: .dtproject  Dockerfile  Dockerfile.lab  README.md  config.yaml  requirements.txt  submission.yaml
collision/: .dtproject  README.md
collision-checker/: .dtproject  README.md
collision-detection/: README.md
dd21-localization-lx/: .dtproject  .gitignore  README.md
dd21-pid-tuning-lx/: .dtproject  .gitignore  GITHUB_CREDENTIALS.sh  README.md
dd21-sensors-camera/: .dtproject  README.md
dd21-sensors-imu/: .dtproject  README.md
dd21-sensors-tof/: .dtproject  README.md
dd21-slam/: .dtproject  .gitignore  README.md
dd21-ukf-lx/: .dtproject  .gitignore  README.md
demo-lx/: .dtproject  README.md
hello-world-lx/: .dtproject  README.md
introduction-to-ros-lx/: .dtproject  README.md
led-control/: .dtproject  README.md
linux-and-networking/: .dtproject  README.md
modcon/: .dtproject  Dockerfile  Dockerfile.lab  README.md  config.yaml  requirements.txt  submission.yaml
mooc-modcon/: README.md  submission.yaml
object-detection/: .dtproject  Dockerfile  Dockerfile.lab  README.md  debugging.md  submission.yaml
planning/: .dtproject  .gitattributes  Dockerfile.lab  README.md
rendering-on-display/: .dtproject  README.md
ros-template/: Dockerfile  README.md  config.yaml  requirements.txt  submission.yaml
state-estimation/: .dtproject  Dockerfile.override  README.md
state-feedback-lx/: .dtproject  README.md
state_estimation/: .gitignore  Dockerfile  Dockerfile.lab  config.yaml
viscontrol/: Dockerfile.lab  README.md  config.yaml  submission.yaml
(+433 files in other folders)
