<?xml version="1.0"?>
<package>
  <name>encoder_pose</name>
  <version>1.0.0</version>
  <description>The package containing the pose estimation using wheel encoders.</description>

  <maintainer email="vincenzo.polizzi@student.ethz.ch">Vincenzo</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
